fixed the weird extra spacing on the right in the data viz section

--- a/css/spyro.css
+++ b/css/spyro.css
@@ -509,7 +509,7 @@ p {
 }
 
 #outer_data-vis-body_2 {
-    height:calc(100% - 40px);
+    height:calc(100% - 42px);
     overflow-x: scroll;
     overflow-y:hidden;
 }
